# Autonomous-Multi-Agent-GitHub-Issue-Resolver

./: .gitignore  AGENTS.md  README.md  changes.patch  docker-compose.yml
agents/code_reader/: agent.py
agents/code_writer/: agent.py
agents/planner/: agent.py
agents/pr_agent/: agent.py
agents/test_writer/: agent.py
frontend/: .env.local  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Providers.tsx
frontend/src/lib/: apollo-client.ts  queries.ts
gateway/: .env.example  Dockerfile  package-lock.json  package.json
gateway/src/: index.ts
gateway/src/resolvers/: index.ts  redis.ts
gateway/src/schema/: typeDefs.ts
gateway/src/types/: index.ts
orchestrator/: Dockerfile  main.py  pyproject.toml  requirements.txt
orchestrator/src/: graph.py  state.py
prisma/: .env.example  schema.prisma
shared/: llm_client.py  redis_client.py
tests/agents/: test_graph.py  test_llm_client.py  test_state.py
